Tests/Error/Multilingual/.build/catchkorean.pr
{
  "name": "CatchKorean",
  "description": "Set %caughtKorean% to true using variable.set.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %caughtKorean% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%caughtKorean%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null
        }
      ],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Tests/Error/Multilingual/CatchKorean.goal",
  "prPath": "/Tests/Error/Multilingual/.build/catchkorean.pr",
  "hash": "287ada7e401dad5112bfcbd604fa2f11d75a5f355c734fcd157d75eeb32937d2",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}